--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 <!-- Navigation Bar Ends -->
 
+<!-- Hero Section Start -->
+
             <div class="hero-head">
                 <h1>Elevating Spaces Crafting Dreams</h1>
                 <img src="./home/Hero-Card.svg" alt="">
@@ -57,8 +59,64 @@
                 </div>
             </div>
         </header>
-        <main>
-            <section class="fade-in" id="about"></section>
+
+<!-- Hero Section Ends -->
+        <main class="fade-in">
+            <section class="fade-in" id="about">
+                <h3>ABOUT US</h3>
+                <div class="about">
+                    <h2>Architecture Interior</h2>
+                    <p>We specialize in transforming visions into reality. Explore
+                        our portfolio of innovative architectural and interior design
+                        projects crafted with precision.
+                    </p>
+                </div>
+            </section>
+            <section class="fade-in" id="scroll">
+                <div class="scroll-content">
+                    <img src="./home/About-Image.svg" alt="img1">
+                    <img src="./home/About-Image3.svg" alt="img2">
+                    <img src="./home/About-Image2.svg" alt="img3">
+                    <img src="./home/About-Image3.svg" alt="img1">
+                    <img src="./home/About-Image.svg" alt="img2">
+                    <img src="./home/About-Image3.svg" alt="img3">
+                    <img src="./home/About-Image2.svg" alt="img1">
+                    <img src="./home/About-Image3.svg" alt="img2">
+                    <img src="./home/About-Image.svg" alt="img3">
+                    <img src="./home/About-Image3.svg" alt="img1">
+                    <img src="./home/About-Image2.svg" alt="img2">
+                    <img src="./home/About-Image3.svg" alt="img3">
+                  </div>
+            </section>
+            <section class="fade-in" id="acomplish-flex">
+                <div class="acomplish">
+                    <h1>8k</h1>
+                    <h4>Interior Projects</h4>
+                    <p>Designs we have finished
+                        in last 32 years.
+                    </p>
+                </div>
+                <div class="acomplish">
+                    <h1>31</h1>
+                    <h4>Years of Work</h4>
+                    <p>Creations delivered in the
+                        last 32 years.</p>
+                </div>
+                <div class="acomplish">
+                    <h1>12k</h1>
+                    <h4>Satisfied Clients</h4>
+                    <p>Works accomplished in
+                        the past 32 years.
+                    </p>
+                </div>
+                <div class="acomplish">
+                    <h1>97%</h1>
+                    <h4>Happy Rate</h4>
+                    <p>Projects completed over
+                        the past 32 years.
+                    </p>
+                </div>
+            </section>
         </main>
     </div>
     <script src="script.js"></script>
