--- a/index.html
+++ b/index.html
@@ -117,6 +117,44 @@
                     </p>
                 </div>
             </section>
+            <section class="fade-in" id="testimonial">
+                <div class="testimoney">
+                    <h3>TESTIMONIALS</h3>
+                    <h2>Client Stories</h2>
+                    <div class="testimonial-slider">
+                        <div class="testimonial active">
+                            <p>"Dedicated to making visions a reality, we
+                                invite you to explore our portfolio of
+                                innovative architectural and interior design
+                                creations, executed with utmost precision."
+                            </p>
+                            <p class="name">Ishan Veer</p>
+                            <p class="secname">Aadidev Gabbar</p>
+                        </div>
+                        <div class="testimonial">
+                            <p>“We specialize in transforming visions into reality.
+                                 Explore our portfolio of innovative architectural 
+                                 and interior design projects crafted with precision.”
+                            </p>
+                            <p class="name">Aadidev Gabbar</p>
+                            <p class="secname">Aadidev Gabbar</p>
+                        </div>
+                        <div class="testimonial">
+                            <p>"Our expertise lies in turning dreams into tangible spaces.
+                                 Discover our collection of cutting-edge architectural and 
+                                 interior design works, meticulously crafted to perfection."
+                           </p>
+                           <p class="name">Devansh Raghav</p>
+                           <p class="secname">Aadidev Gabbar</p>
+                        </div>
+                    </div>
+                    <div class="testimonial-icon">
+                        <i class='bx bx-left-arrow-alt' ></i>
+                        <i class='bx bx-right-arrow-alt' ></i>
+                    </div>
+                </div>
+                <img src="./home/client.svg" alt="">
+            </section>
         </main>
     </div>
     <script src="script.js"></script>
