--- a/index.html
+++ b/index.html
@@ -155,6 +155,40 @@
                 </div>
                 <img src="./home/client.svg" alt="">
             </section>
+            <section class="fade-in" id="service">
+                <h3>SERVICES</h3>
+                <div class="service-flex">
+                    <h2>Get your dream home
+                        with expert help.
+                    </h2>
+                    <div class="appoint">
+                        <button>Book an appointment <i class='bx bx-arrow-back' ></i></button>
+                    </div>
+                </div>
+                <div class="layout-flex">
+                    <div class="layout">
+                        <img src="./home/Service-image.svg" alt="">
+                        <h4>Home Decoration</h4>
+                        <p>Efficient use of space is crucial in home interior
+                            design. Consider the layout of furniture.
+                        </p>
+                    </div>
+                    <div class="layout">
+                        <img src="./home/Service-image2.svg" alt="">
+                        <h4>Office Space Interior</h4>
+                        <p>Maximizing space is essential in interior design.
+                            Think about furniture placement.
+                        </p>
+                    </div>
+                    <div class="layout">
+                        <img src="./home/Service-image3.svg" alt="">
+                        <h4>Hospitality Decor</h4>
+                        <p>Maximizing space is essential in interior design.
+                            Think about furniture placement.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
     <script src="script.js"></script>
