--- a/index.html
+++ b/index.html
@@ -189,6 +189,51 @@
                     </div>
                 </div>
             </section>
+            <section class="fade-in" id="process">
+                <div class="grid proc">
+                    <h3>PROCESS</h3>
+                    <H2>Our Working Process</H2>
+                </div>
+                <div class="grid pro">
+                    <h3>01</h3>
+                    <h2>Initial Consultation</h2>
+                    <p>The process often begins with an initial
+                        consultation between the designer/architect.
+                        Get started from here.
+                    </p>
+                </div>
+                <div class="grid pro">
+                    <h3>02</h3>
+                    <h2>Concept Development</h2>
+                    <p>In this stage, the designer/architect gathers
+                        detailed information about the project
+                        requirements.
+                    </p>
+                </div>
+                <div class="grid pro">
+                    <h3>03</h3>
+                    <h2>Design Development</h2>
+                    <p>Depending on the project scope and location,
+                        the designer/architect may assist the client in
+                        obtaining.
+                    </p>
+                </div>
+                <div class="grid pro">
+                    <h3>04</h3>
+                    <h2>Permitting & Approvals</h2>
+                    <p>Depending on the project scope and location,
+                        the designer/architect may assist the client.
+                        We work to make you 100% happy.
+                    </p>
+                </div>
+                <div class="grid pro">
+                    <h3>05</h3>
+                    <h2>Project Closeout</h2>
+                    <p>Once construction is complete, the
+                        designer/architect conducts a final inspection
+                        of the project.</p>
+                </div>
+            </section>
         </main>
     </div>
     <script src="script.js"></script>
