--- a/index.html
+++ b/index.html
@@ -234,6 +234,83 @@
                         of the project.</p>
                 </div>
             </section>
+            <section class="fade-in" id="works">
+                <div class="grid works">
+                    <h3>WORKS</h3>
+                    <h2>Our Projects & Designs</h2>
+                </div>
+                <div class="grid work">
+                    <img src="./home/proj1.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>Orion Home Studio Interior</p>
+                            <p>Dallas, TX</p>
+                        </div>
+                        <i class='bx bx-right-arrow-alt'></i>
+                    </div>
+                </div>
+                <div class="grid work">
+                    <img src="./home/proj2.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>D-Orex Home Interior</p>
+                            <p>Milwaukee, WI</p>
+                        </div>
+                        <i class='bx bx-right-arrow-alt'></i>
+                    </div>
+                </div>
+                <div class="grid work">
+                    <img src="./home/proj3.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>Home Corner Interior</p>
+                            <p>Boston, MA</p>
+                        </div>
+                        <i class='bx bx-right-arrow-alt'></i>
+                    </div>
+                </div>
+                <div class="grid work">
+                    <img src="./home/proj4.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>EcoChic Home Styling</p>
+                            <p>Miami, FL</p>
+                        </div>
+                        <i class='bx bx-right-arrow-alt'></i>
+                    </div>
+                </div>
+                <div class="grid work">
+                    <img src="./home/proj5.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>Grayic Office Interior</p>
+                            <p>Washington, D.C.</p>
+                        </div>
+                        <i class='bx bx-right-arrow-alt'></i>
+                    </div>
+                </div>
+                <div class="grid workss">
+                    <button>See more projects <i class='bx bx-arrow-back'></i></button>
+                </div>
+            </section>
+            <section class="fade-in" id="unlock">
+                <div class="unlock-flex">
+                    <div class="head-text">
+                        <h1>Unlock Your Dream
+                            Home Today!
+                        </h1>
+                    </div>
+                    <div class="head-info">
+                        <p>We encourage clients to actively participate in discussions,
+                            share their ideas, preferences, and feedback.
+                        </p>
+                        <div class="head-btn">
+                            <button>Get in touch <i class='bx bx-arrow-back'></i></button>
+                            <button>+234 9022 532 359</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
     <script src="script.js"></script>
