--- a/index.html
+++ b/index.html
@@ -167,17 +167,17 @@
                 </div>
                 <div class="layout-flex">
                     <div class="layout">
-                        <img src="./home/Service-image.svg" alt="">
-                        <h4>Home Decoration</h4>
-                        <p>Efficient use of space is crucial in home interior
-                            design. Consider the layout of furniture.
-                        </p>
-                    </div>
-                    <div class="layout">
                         <img src="./home/Service-image2.svg" alt="">
                         <h4>Office Space Interior</h4>
                         <p>Maximizing space is essential in interior design.
                             Think about furniture placement.
+                        </p>
+                    </div>
+                    <div class="layout">
+                        <img src="./home/Service-image.svg" alt="">
+                        <h4>Home Decoration</h4>
+                        <p>Efficient use of space is crucial in home interior
+                            design. Consider the layout of furniture.
                         </p>
                     </div>
                     <div class="layout">
@@ -307,6 +307,70 @@
                         <div class="head-btn">
                             <button>Get in touch <i class='bx bx-arrow-back'></i></button>
                             <button>+234 9022 532 359</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="fade-in" id="question">
+                <div class="quest-flex">
+                    <h3>FAQS</h3>
+                    <h2>Still Have A Question</h2>
+                    <button>See all FAQs<i class='bx bx-arrow-back'></i></button>
+                </div>
+                <div class="faq">
+                    <div class="faq-item">
+                      <div class="faq-question">
+                        <p>01</p>
+                        <span>How involved can I be in the design process?</span>
+                        <i class="bx bx-chevron-down faq-icon"></i>
+                      </div>
+                      <div class="faq-answer">We believe in collaboration and value your input throughout
+                         the design process. We encourage clients to actively participate in discussions,
+                          share their ideas, preferences, and feedback.
+                      </div>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">
+                          <p>02</p>
+                          <span>What types of projects does Nextspace specialize in?</span>
+                          <i class="bx bx-chevron-down faq-icon"></i>
+                        </div>
+                        <div class="faq-answer">We believe in collaboration and value your input throughout
+                           the design process. We encourage clients to actively participate in discussions,
+                            share their ideas, preferences, and feedback.
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">
+                          <p>03</p>
+                          <span>What is the typical timeline for completing a project?</span>
+                          <i class="bx bx-chevron-down faq-icon"></i>
+                        </div>
+                        <div class="faq-answer">We believe in collaboration and value your input throughout
+                           the design process. We encourage clients to actively participate in discussions,
+                            share their ideas, preferences, and feedback.
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">
+                          <p>04</p>
+                          <span>What types of projects does Nextspace specialize in?</span>
+                          <i class="bx bx-chevron-down faq-icon"></i>
+                        </div>
+                        <div class="faq-answer">We believe in collaboration and value your input throughout
+                           the design process. We encourage clients to actively participate in discussions,
+                            share their ideas, preferences, and feedback.
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">
+                          <p>05</p>
+                          <span>What sets your firm apart from others in the industry?</span>
+                          <i class="bx bx-chevron-down faq-icon"></i>
+                        </div>
+                        <div class="faq-answer">We believe in collaboration and value your input throughout
+                           the design process. We encourage clients to actively participate in discussions,
+                            share their ideas, preferences, and feedback.
                         </div>
                     </div>
                 </div>
