--- a/index.html
+++ b/index.html
@@ -376,6 +376,49 @@
                 </div>
             </section>
         </main>
+        <footer class="fade-in">
+            <div class="first-foot">
+                <div class="grid one">
+                    <h2>Ready To Build Your Dream Project</h2>
+                    <div class="get-btn">Get in touch<i class='bx bx-arrow-back'></i></div>
+                </div>
+                <div class="grid two">
+                    <p>Company</p>
+                    <a href="#">Projects</a>
+                    <a href="#">About</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Career</a>
+                </div>
+                <div class="grid two">
+                    <p>Pages</p>
+                    <a href="#">FAQ</a>
+                    <a href="#">Terms & Condition</a>
+                    <a href="#">Policies</a>
+                    <a href="#">License</a>
+                </div>
+            </div>
+            <div class="second-foot">
+                <div class="grid four">
+                    <div class="logo">
+                        <img src="./home/Clip path group.svg" alt="">
+                        <p>Nextspace</p>
+                    </div>
+                    <P>Develops conceptual design ideas, refines
+                        them into detailed plans.
+                    </P>
+                </div>
+                <div class="grid five">
+                    <p>70 University Ave Palo Alto, CA 94301</p>
+                    <a href="#">650.671.1706</a>
+                    <a href="#">nextgentechie@gmail.com</a>
+                </div>
+                <div class="grid six">
+                    <a href="#">Discord</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Linkedin</a>
+                </div>
+            </div>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
