--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                         <a href="index.html">All pages</a>
                         <div class="down">
                             <div class="drop-box">
-                                <a href="">Homepage</a>
-                                <a href="">About</a>
+                                <a href="index.html">Homepage</a>
+                                <a href="about.html">About</a>
                                 <a href="">Service</a>
                                 <a href="">Review</a>
                                 <a href="">Blog</a>
