--- a/about.html
+++ b/about.html
@@ -141,6 +141,167 @@
                 </div>
                 <img src="./home/client.svg" alt="">
             </section>
+            <section class="fade-in" id="team">
+                <div class="team-head">
+                    <h3>THE SOLUTIONS</h3>
+                    <h2>Meet the Team</h2>
+                </div>
+                <div class="team-grid">
+                    <div class="meet first">
+                        <img src="./story/Team-image.svg" alt="">
+                        <div class="meet-flex">
+                            <h4>MAx De Lucia</h4>
+                            <p>Co-Founder</p>
+                        </div>
+                    </div>
+                    <div class="meet second">
+                        <img src="./story/Team-image2.svg" alt="">
+                        <div class="meet-flex">
+                            <h4>MAx De Lucia</h4>
+                            <p>Co-Founder</p>
+                        </div>
+                    </div>
+                    <div class="meet third">
+                        <img src="./story/Team-image3.svg" alt="">
+                        <div class="meet-flex">
+                            <h4>MAx De Lucia</h4>
+                            <p>Co-Founder</p>
+                        </div>
+                    </div>
+                    <div class="meet fourth">
+                        <img src="./story/Team-image4.svg" alt="">
+                        <div class="meet-flex">
+                            <h4>MAx De Lucia</h4>
+                            <p>Co-Founder</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="fade-in" id="unlock">
+                <div class="unlock-flex">
+                    <div class="head-text">
+                        <h1>Unlock Your Dream
+                            Home Today!
+                        </h1>
+                    </div>
+                    <div class="head-info">
+                        <p>We encourage clients to actively participate in discussions,
+                            share their ideas, preferences, and feedback.
+                        </p>
+                        <div class="head-btn">
+                            <button>Get in touch <i class='bx bx-arrow-back'></i></button>
+                            <button>+234 9022 532 359</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="fade-in" id="question">
+                <div class="quest-flex">
+                    <h3>FAQS</h3>
+                    <h2>Still Have A Question</h2>
+                    <button>See all FAQs<i class='bx bx-arrow-back'></i></button>
+                </div>
+                <div class="faq">
+                    <div class="faq-item">
+                      <div class="faq-question">
+                        <p>01</p>
+                        <span>How involved can I be in the design process?</span>
+                        <i class="bx bx-chevron-down faq-icon"></i>
+                      </div>
+                      <div class="faq-answer">We believe in collaboration and value your input throughout
+                         the design process. We encourage clients to actively participate in discussions,
+                          share their ideas, preferences, and feedback.
+                      </div>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">
+                          <p>02</p>
+                          <span>What types of projects does Nextspace specialize in?</span>
+                          <i class="bx bx-chevron-down faq-icon"></i>
+                        </div>
+                        <div class="faq-answer">We believe in collaboration and value your input throughout
+                           the design process. We encourage clients to actively participate in discussions,
+                            share their ideas, preferences, and feedback.
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">
+                          <p>03</p>
+                          <span>What is the typical timeline for completing a project?</span>
+                          <i class="bx bx-chevron-down faq-icon"></i>
+                        </div>
+                        <div class="faq-answer">We believe in collaboration and value your input throughout
+                           the design process. We encourage clients to actively participate in discussions,
+                            share their ideas, preferences, and feedback.
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">
+                          <p>04</p>
+                          <span>What types of projects does Nextspace specialize in?</span>
+                          <i class="bx bx-chevron-down faq-icon"></i>
+                        </div>
+                        <div class="faq-answer">We believe in collaboration and value your input throughout
+                           the design process. We encourage clients to actively participate in discussions,
+                            share their ideas, preferences, and feedback.
+                        </div>
+                    </div>
+                    <div class="faq-item">
+                        <div class="faq-question">
+                          <p>05</p>
+                          <span>What sets your firm apart from others in the industry?</span>
+                          <i class="bx bx-chevron-down faq-icon"></i>
+                        </div>
+                        <div class="faq-answer">We believe in collaboration and value your input throughout
+                           the design process. We encourage clients to actively participate in discussions,
+                            share their ideas, preferences, and feedback.
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
+        <footer class="fade-in">
+            <div class="first-foot">
+                <div class="grid onee">
+                    <h2>Ready To Build Your Dream Project</h2>
+                    <div class="get-btn">Get in touch<i class='bx bx-arrow-back'></i></div>
+                </div>
+                <div class="grid twoo">
+                    <p>Company</p>
+                    <a href="#">Projects</a>
+                    <a href="#">About</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Career</a>
+                </div>
+                <div class="grid twoo">
+                    <p>Pages</p>
+                    <a href="#">FAQ</a>
+                    <a href="#">Terms & Condition</a>
+                    <a href="#">Policies</a>
+                    <a href="#">License</a>
+                </div>
+            </div>
+            <div class="second-foot">
+                <div class="grid fourr">
+                    <div class="logo">
+                        <img src="./home/Clip path group.svg" alt="">
+                        <p>Nextspace</p>
+                    </div>
+                    <P>Develops conceptual design ideas, refines
+                        them into detailed plans.
+                    </P>
+                </div>
+                <div class="grid fivee">
+                    <p>70 University Ave Palo Alto, CA 94301</p>
+                    <a href="#">650.671.1706</a>
+                    <a href="#">nextgentechie@gmail.com</a>
+                </div>
+                <div class="grid sixx">
+                    <a href="#">Discord</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Linkedin</a>
+                </div>
+            </div>
+        </footer>
         <script src="./about.js"></script>
     </div>
