--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             <div class="drop-box">
                                 <a href="index.html">Homepage</a>
                                 <a href="about.html">About</a>
-                                <a href="">Service</a>
+                                <a href="service.html">Service</a>
                                 <a href="">Review</a>
                                 <a href="">Blog</a>
                             </div>
@@ -385,7 +385,7 @@
                 <div class="grid two">
                     <p>Company</p>
                     <a href="#">Projects</a>
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                     <a href="#">Contact</a>
                     <a href="#">Career</a>
                 </div>
