--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Booking</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="service.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -39,70 +39,132 @@
                 <button class="get-btn">Get in Touch</button>
             </nav>
             <div class="hero-head">
-                <h1>Our Story</h1>
+                <h1>Service</h1>
             </div>
         </header>
         <main>
-            <section class="fade-in" id="story">
-                <h2>We specialize in transforming visions into
-                    reality. Explore our portfolio of innovative
-                    architectural and interior design projects
-                    crafted with precision.
-                </h2>
-                <div class="grid-story">
-                    <div class="grid one"></div>
-                    <div class="grid two"></div>
-                    <div class="grid three"></div>
-                    <div class="grid four"></div>
-                    <div class="grid five"></div>
-                    <div class="grid six"></div>
+            <section class="fade-in" id="service">
+                <div class="first-service">
+                    <img src="./service/Service-Image.svg" alt="">
+                    <div class="service-info">
+                        <div class="service-head">
+                            <h2>Office Space Interior</h2>
+                            <p>Efficient use of space is crucial in home interior
+                                design. Consider the layout of furniture.
+                            </p>
+                        </div>
+                        <div class="service-main">
+                            <div class="service-text">
+                                <div class="flex-serve">
+                                    <p>01</p>
+                                    <h3>Ergonomic design solutions</h3>
+                                </div>
+                                <p class="next">Once construction is complete, the designer/architect
+                                    conducts a final inspection of the project.
+                                </p>
+                            </div>
+                            <div class="service-text">
+                                <div class="flex-serve">
+                                    <p>02</p>
+                                    <h3>Custom and cabinetry design</h3>
+                                </div>
+                                <p class="next">After construction concludes, the designer/architect
+                                    performs a final project inspection.
+                                </p>
+                            </div>
+                            <div class="service-text">
+                                <div class="flex-serve">
+                                    <p>03</p>
+                                    <h3>Workplace wellness design</h3>
+                                </div>
+                                <p class="next">When construction is finished, the designer/architect
+                                    carries out a final project review.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="second-service">
+                    <div class="service-info">
+                        <div class="service-head">
+                            <h2>Home Decoration</h2>
+                            <p>Smart use of space is critical in home interior design.
+                                Pay attention to how furniture is laid out.
+                            </p>
+                        </div>
+                        <div class="service-main">
+                            <div class="service-text">
+                                <div class="flex-serve">
+                                    <p>01</p>
+                                    <h3>Interior design consultation</h3>
+                                </div>
+                                <p class="next">Upon construction completion, the designer/architect
+                                    executes a final project check.
+                                </p>
+                            </div>
+                            <div class="service-text">
+                                <div class="flex-serve">
+                                    <p>02</p>
+                                    <h3>Flooring options and finishes</h3>
+                                </div>
+                                <p class="next">Once the build is done, the designer/architect undertakes a
+                                    final inspection of the project.
+                                </p>
+                            </div>
+                            <div class="service-text">
+                                <div class="flex-serve">
+                                    <p>03</p>
+                                    <h3>Artwork and accessories curation</h3>
+                                </div>
+                                <p class="next">After the building phase, the designer/architect conducts a
+                                    final project assessment.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <img src="./service/Service-Image2.svg" alt="">
+                </div>
+                <div class="first-service">
+                    <img src="./service/Service-Image3.svg" alt="">
+                    <div class="service-info">
+                        <div class="service-head">
+                            <h2>Hospitality Decor</h2>
+                            <p>Maximizing space is key in home interior design.
+                                Focus on the layout of furnishings.
+                            </p>
+                        </div>
+                        <div class="service-main">
+                            <div class="service-text">
+                                <div class="flex-serve">
+                                    <p>01</p>
+                                    <h3>Guest room and suite design</h3>
+                                </div>
+                                <p class="next">Upon completing construction, the designer/architect
+                                    does a final inspection of the project.
+                                </p>
+                            </div>
+                            <div class="service-text">
+                                <div class="flex-serve">
+                                    <p>02</p>
+                                    <h3>Outdoor and patio design</h3>
+                                </div>
+                                <p class="next">Post-construction, the designer/architect carries out the
+                                    final project inspection.
+                                </p>
+                            </div>
+                            <div class="service-text">
+                                <div class="flex-serve">
+                                    <p>03</p>
+                                    <h3>Restaurant and bar interior design</h3>
+                                </div>
+                                <p class="next">When the construction ends, the designer/architect
+                                    performs a final check of the project.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
-            <section class="fade-in" id="challenge">
-                <div class="left-call">
-                    <h3>THE CHALLENGE</h3>
-                    <h2>What We Offer</h2>
-                </div>
-                <div class="right-call">
-                    <h2>We specialize in transforming visions into reality.
-                        Explore our portfolio of innovative architectural
-                        and interior design projects crafted with
-                        precision.
-                    </h2>
-                    <p>Explanation of how personal information is used to maintain the security of interior
-                        agency systems, prevent unauthorized access or fraud, and protect against other
-                        unlawful activities. Assurance that personal information will only be collected and used
-                        for purposes consistent with individuals' consent or preferences, where applicable, and
-                        in accordance with applicable privacy laws and regulations.
-                    </p>
-                </div>
-            </section>
-            <seection class="fade-in" id="story-flex">
-                <div>
-                    <img src="./story/Work-image.svg" alt="">
-                    <h3>Work-Life Balance</h3>
-                    <p>Cultivating a healthy work-life balance
-                        demonstrates an organization's commitment to
-                        employee well-being.
-                    </p>
-                </div>
-                <div>
-                    <img src="./story/Work-image2.svg" alt="">
-                    <h3>Professional Development</h3>
-                    <p>A culture that prioritizes professional
-                        development encourages continuous learning,
-                        growth, and advancement.
-                    </p>
-                </div>
-                <div>
-                    <img src="./story/Work-image3.svg" alt="">
-                    <h3>Wellness and Health</h3>
-                    <p>Prioritizing employee wellness and health
-                        initiatives demonstrates a commitment to
-                        overall well-being.
-                    </p>
-                </div>
-            </seection>
             <section class="fade-in" id="testimonial">
                 <div class="testimoney">
                     <h3>TESTIMONIALS</h3>
@@ -140,60 +202,6 @@
                     </div>
                 </div>
                 <img src="./home/client.svg" alt="">
-            </section>
-            <section class="fade-in" id="team">
-                <div class="team-head">
-                    <h3>THE SOLUTIONS</h3>
-                    <h2>Meet the Team</h2>
-                </div>
-                <div class="team-grid">
-                    <div class="meet first">
-                        <img src="./story/Team-image.svg" alt="">
-                        <div class="meet-flex">
-                            <h4>MAx De Lucia</h4>
-                            <p>Co-Founder</p>
-                        </div>
-                    </div>
-                    <div class="meet second">
-                        <img src="./story/Team-image2.svg" alt="">
-                        <div class="meet-flex">
-                            <h4>MAx De Lucia</h4>
-                            <p>Co-Founder</p>
-                        </div>
-                    </div>
-                    <div class="meet third">
-                        <img src="./story/Team-image3.svg" alt="">
-                        <div class="meet-flex">
-                            <h4>MAx De Lucia</h4>
-                            <p>Co-Founder</p>
-                        </div>
-                    </div>
-                    <div class="meet fourth">
-                        <img src="./story/Team-image4.svg" alt="">
-                        <div class="meet-flex">
-                            <h4>MAx De Lucia</h4>
-                            <p>Co-Founder</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="fade-in" id="unlock">
-                <div class="unlock-flex">
-                    <div class="head-text">
-                        <h1>Unlock Your Dream
-                            Home Today!
-                        </h1>
-                    </div>
-                    <div class="head-info">
-                        <p>We encourage clients to actively participate in discussions,
-                            share their ideas, preferences, and feedback.
-                        </p>
-                        <div class="head-btn">
-                            <button>Get in touch <i class='bx bx-arrow-back'></i></button>
-                            <button>+234 9022 532 359</button>
-                        </div>
-                    </div>
-                </div>
             </section>
             <section class="fade-in" id="question">
                 <div class="quest-flex">
@@ -259,6 +267,24 @@
                     </div>
                 </div>
             </section>
+            <section class="fade-in" id="unlock">
+                <div class="unlock-flex">
+                    <div class="head-text">
+                        <h1>Unlock Your Dream
+                            Home Today!
+                        </h1>
+                    </div>
+                    <div class="head-info">
+                        <p>We encourage clients to actively participate in discussions,
+                            share their ideas, preferences, and feedback.
+                        </p>
+                        <div class="head-btn">
+                            <button>Get in touch <i class='bx bx-arrow-back'></i></button>
+                            <button>+234 9022 532 359</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="fade-in">
             <div class="first-foot">
@@ -303,6 +329,6 @@
                 </div>
             </div>
         </footer>
-        <script src="./about.js"></script>
     </div>
+    <script src="service.js"></script>
 </body>
