--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                                 <a href="index.html">Homepage</a>
                                 <a href="about.html">About</a>
                                 <a href="service.html">Service</a>
-                                <a href="">Review</a>
+                                <a href="review.html">Review</a>
                                 <a href="">Blog</a>
                             </div>
                         </div>
                     </li>
-                    <li><a href="contact.html">Projects</a></li>
+                    <li><a href="project.html">Projects</a></li>
                     <li><a href="about.html">Contact</a></li>
                 </ul>
                 <div class="logo">
