--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
                                 <a href="about.html">About</a>
                                 <a href="service.html">Service</a>
                                 <a href="review.html">Review</a>
-                                <a href="">Blog</a>
                             </div>
                         </div>
                     </li>
                     <li><a href="project.html">Projects</a></li>
-                    <li><a href="about.html">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="logo">
                     <img src="./home/Clip path group.svg" alt="">
@@ -386,7 +385,7 @@
                     <p>Company</p>
                     <a href="#">Projects</a>
                     <a href="about.html">About</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                     <a href="#">Career</a>
                 </div>
                 <div class="grid two">
