--- a/review.html
+++ b/review.html
@@ -20,7 +20,6 @@
                                 <a href="about.html">About</a>
                                 <a href="service.html">Service</a>
                                 <a href="review.html">Review</a>
-                                <a href="">Blog</a>
                             </div>
                         </div>
                     </li>
@@ -117,7 +116,7 @@
                     <p>Company</p>
                     <a href="#">Projects</a>
                     <a href="about.html">About</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                     <a href="#">Career</a>
                 </div>
                 <div class="grid twoo">
