--- a/contact.html
+++ b/contact.html
@@ -76,11 +76,11 @@
                     <div class="second">
                         <div class="right">
                             <h3>Working Mail</h3>
-                            <p>project@nextspace.com</p>
+                            <a href="#">nextgentechie@gmail.com</a>
                         </div>
                         <div class="right">
                             <h3>Office Phone</h3>
-                            <p>+21 8920 9108 1982</p>
+                            <a href="#">+234 815 780 8694</a>
                         </div>
                     </div>
                     <div class="third">
