--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 </div>
                 <div class="grid two">
                     <p>Company</p>
-                    <a href="#">Projects</a>
+                    <a href="project.html">Projects</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
                     <a href="#">Career</a>
