--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Booking</title>
-    <link rel="stylesheet" href="review.css">
+    <link rel="stylesheet" href="project.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -38,55 +38,92 @@
                 <button class="get-btn">Get in Touch</button>
             </nav>
             <div class="hero-head">
-                <h1>Customer Reviews</h1>
+                <h1>Projects</h1>
             </div>
         </header>
         <main>
-            <section class="fade-in" id="review">
-                <div class="first-review">
-                    <img src="./review/Review-image.svg" alt="">
-                    <div class="rev-text">
-                        <h2>“We specialize in transforming visions
-                            into reality. Explore our portfolio of
-                            innovative architectural and interior
-                            design projects crafted with
-                            precision.”
-                        </h2>
-                        <div class="flex-rev">
-                            <h3>William Elijah Jr.</h3>
-                            <p>Managing Director</p>
+            <div class="fade-in" id="works">
+                <div class="grid work">
+                    <img src="./project/Project-image.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>D-Orex Home Interior</p>
+                            <p>Milwaukee, WI</p>
                         </div>
+                        <i class='bx bx-right-arrow-alt'></i>
                     </div>
                 </div>
-                <div class="second-review">
-                    <img src="./review/Review-image2.svg" alt="">
-                    <div class="rev-text">
-                        <h2>“Thanks to Nextspace, my home has
-                            been transformed into a sanctuary
-                            that reflects my personality and
-                            lifestyle.”
-                        </h2>
-                        <div class="flex-rev">
-                            <h3>Lucas Benjamin</h3>
-                            <p>Managing Director</p>
+                <div class="grid work">
+                    <img src="./project/Project-image1.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>Orion Home Studio Interior</p>
+                            <p>Dallas, TX</p>
                         </div>
+                        <i class='bx bx-right-arrow-alt'></i>
                     </div>
                 </div>
-                <div class="first-review">
-                    <img src="./review/Review-image3.svg" alt="">
-                    <div class="rev-text">
-                        <h2>“I had the pleasure of working with
-                            Nextspace on a complete renovation
-                            of my home, and I couldn't be happier
-                            with the results.”
-                        </h2>
-                        <div class="flex-rev">
-                            <h3>Sania Tama Mirja</h3>
-                            <p>Managing Director</p>
+                <div class="grid work">
+                    <img src="./project/Project-image2.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>EcoChic Home Styling</p>
+                            <p>Miami, FL</p>
                         </div>
+                        <i class='bx bx-right-arrow-alt'></i>
                     </div>
                 </div>
-            </section>
+                <div class="grid work">
+                    <img src="./project/Project-image3.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>Home Corner Interior</p>
+                            <p>Boston, MA</p>
+                        </div>
+                        <i class='bx bx-right-arrow-alt'></i>
+                    </div>
+                </div>
+                <div class="grid work">
+                    <img src="./project/Project-image4.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>Partex Office Interior</p>
+                            <p>Fresno, CA</p>
+                        </div>
+                        <i class='bx bx-right-arrow-alt'></i>
+                    </div>
+                </div>
+                <div class="grid work">
+                    <img src="./project/Project-image5.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>Grayic Office Interior</p>
+                            <p>Washington, D.C.</p>
+                        </div>
+                        <i class='bx bx-right-arrow-alt'></i>
+                    </div>
+                </div>
+                <div class="grid work">
+                    <img src="./project/Project-image6.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>LuxeLiving Home Décor</p>
+                            <p>Chicago, IL</p>
+                        </div>
+                        <i class='bx bx-right-arrow-alt'></i>
+                    </div>
+                </div>
+                <div class="grid work">
+                    <img src="./project/Project-image7.svg" alt="">
+                    <div class="hyper">
+                        <div class="locate">
+                            <p>UrbanNest Interior Design</p>
+                            <p>Atlanta, GA</p>
+                        </div>
+                        <i class='bx bx-right-arrow-alt'></i>
+                    </div>
+                </div>
+            </div>
             <section class="fade-in" id="unlock">
                 <div class="unlock-flex">
                     <div class="head-text">
@@ -108,18 +145,18 @@
         </main>
         <footer class="fade-in">
             <div class="first-foot">
-                <div class="grid onee">
+                <div class="grid one">
                     <h2>Ready To Build Your Dream Project</h2>
                     <div class="get-btn">Get in touch<i class='bx bx-arrow-back'></i></div>
                 </div>
-                <div class="grid twoo">
+                <div class="grid two">
                     <p>Company</p>
                     <a href="project.html">Projects</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
                     <a href="#">Career</a>
                 </div>
-                <div class="grid twoo">
+                <div class="grid two">
                     <p>Pages</p>
                     <a href="#">FAQ</a>
                     <a href="#">Terms & Condition</a>
@@ -128,7 +165,7 @@
                 </div>
             </div>
             <div class="second-foot">
-                <div class="grid fourr">
+                <div class="grid four">
                     <div class="logo">
                         <img src="./home/Clip path group.svg" alt="">
                         <p>Nextspace</p>
@@ -137,18 +174,18 @@
                         them into detailed plans.
                     </P>
                 </div>
-                <div class="grid fivee">
+                <div class="grid five">
                     <p>70 University Ave Palo Alto, CA 94301</p>
                     <a href="#">650.671.1706</a>
                     <a href="#">nextgentechie@gmail.com</a>
                 </div>
-                <div class="grid sixx">
+                <div class="grid six">
                     <a href="#">Discord</a>
                     <a href="#">Twitter</a>
                     <a href="#">Linkedin</a>
                 </div>
             </div>
         </footer>
-        <script src="./review.js"></script>
+        <script src="./project.js"></script>
     </div>
 </body>
