--- a/service.html
+++ b/service.html
@@ -293,7 +293,7 @@
                 </div>
                 <div class="grid twoo">
                     <p>Company</p>
-                    <a href="#">Projects</a>
+                    <a href="project.html">Projects</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
                     <a href="#">Career</a>
